# docs/swagger.json
@@ -5,7 +5,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "Basic authentication untuk admin endpoints",
+        "description": "RESTful API for the Executive Information System (EIS) of Universitas Pendidikan Ganesha.\nThis API provides a modular set of endpoints to support various institutional processes,\nincluding Academic Management (courses, schedules, curriculum), Student Affairs (activities,\nscholarships, organizations), Alumni Relations (tracer study, networking, career services),\nGeneral Administration (assets, facilities, documents), Finance (budgeting, payments, reports),\nand Performance Management (KPIs, research output, community services).\nThe modular approach ensures flexibility, scalability, and integration across departments,\nenabling leaders and staff to access accurate, real-time information for decision-making.",
         "title": "Executive Information System RESTful API",
         "termsOfService": "https://guthub.com/anggananda",
         "contact": {
@@ -431,6 +431,35 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/health-check": {
+            "get": {
+                "description": "HealthCheckHandler responds with the API health status.",
+                "tags": [
+                    "Health-Check"
+                ],
+                "summary": "Health Check Handler.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SuccessResponse"
                         }
                     },
                     "400": {
@@ -3684,6 +3713,15 @@
                 }
             }
         },
+        "models.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
         "models.Tracer": {
             "type": "object",
             "properties": {
@@ -3858,11 +3896,8 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
-        },
         "BearerAuth": {
-            "description": "Type \"Bearer\" followed by a space and JWT token. Example: \"Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...\"",
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
